Fix [#31465] Segmentation Fault when Ctrl+Up/Down arrow to restore size of 3d Viewport.

Simply added a check for NULL pointer...